--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ This is my <u><em>first</em> webpage</u></p>
 		<li>Mars</li>
 		<li>Twix</li>
 		<li>Snickers</li>
-    <li>Maltasers</li>
+    <li>Malteasers</li>
 	</ul>
 	<li>Nestle</li>
 	<ul>
